--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,9 +1,11 @@
 <% content_for :title do %>Contact<% end %>
 <h3>Contact</h3>
+<div class="large-6">
   <%= simple_form_for @contact do |form| %>
-  <%= form.error_notification %>
-  <%= form.input :name, autofocus: true %>
-  <%= form.input :email %>
-  <%= form.input :content, as: :text, :input_html => { :class => "span6" } %>
-  <%= form.button :submit, 'Submit', class: 'btn-primary' %>
-<% end %>
+    <%= form.error_notification %>
+    <%= form.input :name, autofocus: true %>
+    <%= form.input :email %>
+    <%= form.input :content, as: :text %>
+    <%= form.button :submit, 'Submit', class: 'button radius' %>
+  <% end %>
+</div>
