--- a/app/views/visitors/new.html.erb
+++ b/app/views/visitors/new.html.erb
@@ -2,17 +2,19 @@
 <% content_for :description do %>Website of Foobar Kadigan<% end %>
 <img src="http://lorempixel.com/1170/600/cats/1">
 <div style="text-align: center; margin-top: 20px">
-  <div class="span4 offset2">
-    <h2>Stay in touch.</h2>
-  </div>
-  <div class="span4">
-    <div>
-      <%= simple_form_for @visitor do |f| %>
-        <%= f.error_notification %>
-        <%= f.input :email, label: false, :placeholder => 'Your email address...' %>
-        <br/>
-        <%= f.submit "Sign up for the newsletter", :class => "btn btn-primary"%>
-      <% end %>
+  <div class="row">
+    <div class="large-6 columns">
+      <h2>Stay in touch.</h2>
+    </div>
+    <div class="large-6 columns">
+      <div class="large-6">
+        <%= simple_form_for @visitor do |f| %>
+          <%= f.error_notification %>
+          <%= f.input :email, label: false, :placeholder => 'Your email address...' %>
+          <br/>
+          <%= f.submit "Sign up for the newsletter", :class => "button radius" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
