--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,12 @@
-<ul class="nav">
-  <li><%= link_to 'Home', root_path %></li>
-  <li><%= link_to 'About', page_path('about') %></li>
-  <li><%= link_to 'Contact', new_contact_path %></li>
-</ul>
+<%# navigation styled for Zurb Foundation 4 %>
+<nav class="top-bar">
+  <ul class="title-area">
+    <li class="name"><%= link_to 'Home', root_path %></li>
+    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+  </ul>
+  <div class="top-bar-section">
+    <ul>
+      <%= render 'layouts/navigation_links' %>
+    </ul>
+  </div>
+</nav>
